Bug 1313347 - Ensure we don't trigger another GC while collecting r=sfink